<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuProfilActivity">

    <ImageView
        android:id="@+id/imageViewDasarProfil"
        android:layout_width="425dp"
        android:layout_height="790dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.508"
        app:srcCompat="@drawable/back_ground_tampilan_awal" />

    <View
        android:id="@+id/viewNotif"
        android:layout_width="349dp"
        android:layout_height="350dp"
        android:background="@drawable/custom_kotak_form"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageViewDasarProfil"
        app:layout_constraintStart_toStartOf="@+id/imageViewDasarProfil"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/viewNotif"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/viewNotif"
        app:layout_constraintTop_toTopOf="@+id/viewNotif"
        app:srcCompat="@drawable/ic_baseline_account_circle_24" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="82dp"
        android:layout_height="19dp"
        android:fontFamily="@font/roboto_bold"
        android:text="Ubah Profile"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/NamaUbahProfile"
        android:layout_width="318dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_person"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/nama"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/viewNotif"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="@+id/viewNotif"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/NoHandphone"
        android:layout_width="318dp"
        android:layout_height="56dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_phone_profile"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/nohp"
        android:inputType="number"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/viewNotif"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="@+id/viewNotif"
        app:layout_constraintTop_toBottomOf="@+id/NamaUbahProfile" />

    <EditText
        android:id="@+id/EmailUbahProfile"
        android:layout_width="318dp"
        android:layout_height="56dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/viewNotif"
        app:layout_constraintStart_toStartOf="@+id/viewNotif"
        app:layout_constraintTop_toBottomOf="@+id/NoHandphone" />

    <Button
        android:id="@+id/buttonProfileCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:backgroundTint="@color/redbutton"
        android:lineSpacingExtra="0sp"
        android:onClick="SwipeHome"
        android:text="Cancel"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/viewNotif"
        app:layout_constraintStart_toStartOf="@+id/viewNotif"
        app:layout_constraintTop_toBottomOf="@+id/EmailUbahProfile" />

    <Button
        android:id="@+id/buttonProfileSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/bluebutton"
        android:lineSpacingExtra="0sp"
        android:onClick="SwipeSubmit"
        android:text="Kirim"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonProfileCancel"
        app:layout_constraintStart_toEndOf="@+id/buttonProfileCancel"
        app:layout_constraintTop_toTopOf="@+id/buttonProfileCancel"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>