<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/_741_1_1">


    <TextView
        android:id="@+id/textViewSCT1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_black_italic"
        android:text="SCT112"
        android:textColor="@color/white"
        android:textSize="64sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSCT2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_black_italic"
        android:text="SCT112"
        android:textColor="#282727"
        android:textSize="64sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSCT3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_black_italic"
        android:text="SCT112"
        android:textColor="@color/black"
        android:textSize="64sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSCT4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/roboto_black_italic"
        android:text="Surabaya Cepat Tanggap"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/NamaRegist"
        android:layout_width="318dp"
        android:layout_height="56dp"
        android:layout_marginTop="284dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_person"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/nama"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EmailRegist"
        android:layout_width="318dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NamaRegist" />

    <EditText
        android:id="@+id/PasswordRegist"
        android:layout_width="315dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_lock_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailRegist" />

<!--    <EditText-->
<!--        android:id="@+id/KonfirmPasswordRegist"-->
<!--        android:layout_width="315dp"-->
<!--        android:layout_height="56dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:background="@drawable/custom_input"-->
<!--        android:drawableStart="@drawable/custom_lock_icon"-->
<!--        android:drawablePadding="12dp"-->
<!--        android:ems="10"-->
<!--        android:hint="@string/konfirmpassword"-->
<!--        android:inputType="textPassword"-->
<!--        android:paddingStart="12dp"-->
<!--        android:paddingEnd="12dp"-->
<!--        android:textColor="@android:color/darker_gray"-->
<!--        android:textSize="14sp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.52"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/PasswordRegist" />-->

<!--    <ImageButton-->
<!--        android:id="@+id/imageButton"-->
<!--        android:layout_width="315dp"-->
<!--        android:layout_height="31dp"-->
<!--        android:layout_marginTop="28dp"-->
<!--        android:background="@drawable/custom_submit_button"-->
<!--        android:drawablePadding="12dp"-->
<!--        android:onClick="signUp"-->
<!--        android:paddingStart="12dp"-->
<!--        android:paddingEnd="12dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.498"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/PasswordRegist"-->
<!--        app:srcCompat="@drawable/custom_arrow_right_icon" />-->
    <Button
        android:id="@+id/registerUser"
        android:layout_width="315dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:text="Register"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordRegist"/>

</androidx.constraintlayout.widget.ConstraintLayout>